[gd_scene load_steps=16 format=3 uid="uid://b4aiw4jts5hgq"]

[ext_resource type="Script" path="res://UI/ritual.gd" id="1_a7a2e"]
[ext_resource type="PackedScene" uid="uid://b5pnl2hsow6jr" path="res://Circles/base_circle.tscn" id="2_ss73g"]
[ext_resource type="PackedScene" uid="uid://djeytu43sbild" path="res://Ingredients/base_ingredient.tscn" id="3_ceipf"]
[ext_resource type="Texture2D" uid="uid://btmyu70grmxid" path="res://UI/IMG_0906.png" id="3_wr7g5"]
[ext_resource type="Texture2D" uid="uid://dc46hjr4vs7rn" path="res://UI/IMG_0907.png" id="4_ktoy1"]
[ext_resource type="Texture2D" uid="uid://rvg04uot3fxd" path="res://UI/IMG_0904.png" id="4_uiuom"]
[ext_resource type="Texture2D" uid="uid://btf8dyacir7y1" path="res://UI/IMG_0908.png" id="5_abfnb"]
[ext_resource type="Theme" uid="uid://bfjcpm14u83hu" path="res://UI/main.tres" id="8_mvi61"]
[ext_resource type="Texture2D" uid="uid://8bfvam2li5u8" path="res://Circles/triangle1.png" id="9_a6qpy"]
[ext_resource type="Texture2D" uid="uid://be4325m5ksihj" path="res://Circles/triangle2.png" id="10_qie2i"]
[ext_resource type="Texture2D" uid="uid://b3ijl3ytn4xff" path="res://Circles/pentagram1.png" id="11_vl2px"]
[ext_resource type="Texture2D" uid="uid://db3tfrr6hh71w" path="res://Circles/pentagram2.png" id="12_ogb0r"]
[ext_resource type="Texture2D" uid="uid://br76g47pjlcxk" path="res://Circles/pentagram3.png" id="13_j2jr0"]
[ext_resource type="Texture2D" uid="uid://b2fe1eyb6dbsw" path="res://Circles/pentagram4.png" id="14_pjwoa"]
[ext_resource type="Texture2D" uid="uid://ykwl8jqqw7ea" path="res://Circles/hexagram.png" id="15_g2fjm"]

[node name="Ritual" type="Node2D"]
script = ExtResource("1_a7a2e")

[node name="Desk" type="Sprite2D" parent="."]
z_index = -2
texture = ExtResource("4_uiuom")
centered = false

[node name="Paper" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("3_wr7g5")
centered = false

[node name="BookClosed" type="Sprite2D" parent="."]
texture = ExtResource("4_ktoy1")
centered = false

[node name="BookOpen" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_abfnb")
centered = false

[node name="IngredientShelf" type="Node2D" parent="."]
position = Vector2(88, 72)

[node name="Triangle1" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
position = Vector2(58, 135)
is_chalk = true
identifier = "Triangle1"
source = true

[node name="Triangle2" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
position = Vector2(145, 136)
is_chalk = true
identifier = "Triangle2"
source = true

[node name="Pentagram1" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
position = Vector2(230, 136)
is_chalk = true
identifier = "Pentagram1"
source = true

[node name="Pentagram2" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
position = Vector2(311, 136)
is_chalk = true
identifier = "Pentagram2"
source = true

[node name="Pentagram3" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
position = Vector2(393, 136)
is_chalk = true
identifier = "Pentagram3"
source = true

[node name="Pentagram4" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
position = Vector2(474, 136)
is_chalk = true
identifier = "Pentagram4"
source = true

[node name="Hexagram" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
position = Vector2(561, 136)
is_chalk = true
identifier = "Hexagram"
source = true

[node name="Claws" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
z_index = 12
position = Vector2(63, 330)
identifier = "Claws"
source = true

[node name="Ash" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
z_index = 14
position = Vector2(46, 516)
identifier = "Ash"
source = true

[node name="Eyes" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
z_index = 13
position = Vector2(201, 422)
identifier = "Eyes"
source = true

[node name="Feathers" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
z_index = 11
position = Vector2(204, 264)
identifier = "Feathers"
source = true

[node name="Gold" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
z_index = 12
position = Vector2(500, 322)
is_dust = true
identifier = "golddust"
source = true

[node name="Beetle" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
z_index = 14
position = Vector2(341, 508)
identifier = "Beetle"
source = true

[node name="Peacock" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
z_index = 12
position = Vector2(341, 358)
identifier = "Peacock"
source = true

[node name="Snake" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
z_index = 15
position = Vector2(199, 590)
identifier = "Snake"
source = true

[node name="Rose" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
z_index = 16
position = Vector2(44, 689)
identifier = "Rose"
source = true

[node name="Teeth" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
position = Vector2(192, 746)
identifier = "Teeth"
source = true

[node name="Moss" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
z_index = 16
position = Vector2(348, 702)
identifier = "Moss"
source = true

[node name="Silver" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
z_index = 14
position = Vector2(498, 487)
is_dust = true
identifier = "silverdust"
source = true

[node name="platdust" parent="IngredientShelf" instance=ExtResource("3_ceipf")]
z_index = 16
position = Vector2(494, 652)
is_dust = true
identifier = "platdust"
source = true

[node name="CirclePos" type="Node2D" parent="."]
z_index = 6
position = Vector2(1059, 550)

[node name="BaseCircle" parent="CirclePos" instance=ExtResource("2_ss73g")]

[node name="visual" parent="CirclePos/BaseCircle" index="4"]
visible = false

[node name="Reset" type="Button" parent="."]
offset_left = 1511.0
offset_top = 238.0
offset_right = 1764.0
offset_bottom = 313.0
focus_mode = 0
theme = ExtResource("8_mvi61")
text = "Reset Ritual"

[node name="ChalkCircles" type="Node2D" parent="."]

[node name="Triangle1" type="Sprite2D" parent="ChalkCircles"]
position = Vector2(131, 206)
scale = Vector2(0.176948, 0.176948)
texture = ExtResource("9_a6qpy")

[node name="Triangle2" type="Sprite2D" parent="ChalkCircles"]
position = Vector2(212, 203)
scale = Vector2(0.176948, 0.176948)
texture = ExtResource("10_qie2i")

[node name="Pentagram1" type="Sprite2D" parent="ChalkCircles"]
position = Vector2(297, 209)
scale = Vector2(0.186151, 0.186151)
texture = ExtResource("11_vl2px")

[node name="Pentagram2" type="Sprite2D" parent="ChalkCircles"]
position = Vector2(383, 206)
scale = Vector2(0.176948, 0.176948)
texture = ExtResource("12_ogb0r")

[node name="Pentagram3" type="Sprite2D" parent="ChalkCircles"]
position = Vector2(463, 206)
scale = Vector2(0.176948, 0.176948)
texture = ExtResource("13_j2jr0")

[node name="Pentagram4" type="Sprite2D" parent="ChalkCircles"]
position = Vector2(541, 206)
scale = Vector2(0.167471, 0.167471)
texture = ExtResource("14_pjwoa")

[node name="Hexagram" type="Sprite2D" parent="ChalkCircles"]
position = Vector2(632, 206)
scale = Vector2(0.17628, 0.17628)
texture = ExtResource("15_g2fjm")

[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]

[editable path="CirclePos/BaseCircle"]
